--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     top:0;
     width: 100%;
     padding-top: 1rem;
@@ -35,7 +35,7 @@ ul {
 
 
 .nba-logo {
-    margin-left: 0.5rem;
+    margin-left: 15rem;
     width: 15rem;
     height: auto;
 }
@@ -71,10 +71,11 @@ ul {
 
     .navbar{
         position: fixed;
+        justify-content: space-between;
     }
 
     .nba-logo {
-        margin-left: 0.5rem;
+        margin-left: 1rem;
         width: 8rem;
         height: auto;
     }
@@ -116,8 +117,9 @@ ul {
     .burger{
         display: block;
         position: relative;
+        margin-right: 1rem;
+        margin-top: 0.5rem;
         padding: 0;
-        padding-right: 3rem;
         width: 45px;
         height: 45px;
         border: none;
@@ -196,7 +198,6 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-
 background-color:#0c121d;
 height: 4.5rem;
 width: 100%;
@@ -207,7 +208,14 @@ margin-bottom: 1rem;
     display: flex;
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 768px){
+    
+    .dateWrapper {
+        margin-top: 5rem;
+
+    }
+    
+    
     .dateWrapperButtons {
         width: 90%;
     } 
@@ -272,7 +280,7 @@ margin-bottom: 1rem;
     margin-left: auto;
     margin-right:auto ;
     table-layout: fixed;
-    width: 50%;
+    width: 60%;
     border-collapse: collapse;
     border-radius: 7px;
     background-color: #1D2C49;  
@@ -281,14 +289,6 @@ margin-bottom: 1rem;
 @media screen and (max-width: 768px){
     .standingsTable{
 
-        width: 80%;
-    } 
- }
-
-
-@media screen and (max-width: 640px){
-    .standingsTable{
-    
         width: 95%;
     } 
  }
