--- a/css/style.css
+++ b/css/style.css
@@ -706,9 +706,19 @@ tbody tr:nth-child(even) {
     background: rgb(44, 0, 0);
 }
 
-.BKN{
-    background: rgb(0, 0, 0);
+.CLE .gameCardImage {
+   width: 40%; 
 }
+
+
+.BKN{
+    background: rgb(39, 39, 39);
+}
+
+.BKN .gameCardImage {
+    width: 40%; 
+ }
+
 
 .MIA{
     background: rgb(77, 0, 0);
@@ -717,6 +727,10 @@ tbody tr:nth-child(even) {
 .NYK{
     background: rgb(216, 86, 0);
 }
+
+.NKK .gameCardImage {
+    width: 90%; 
+ }
 
 .ATL{
     background: rgb(255, 40, 40);
@@ -810,3 +824,7 @@ tbody tr:nth-child(even) {
 .HOU {
     background: rgb(46, 0, 0);
 }
+
+.HOU .gameCardImage {
+    width: 60%; 
+ }
