--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,52 @@ body {
     display: none;
 }
 
+.loader-container.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0c121d;
+    transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+}
+
+.loader-container p {
+    font-family: 'Jost', sans-serif;
+    font-size: 30px;
+    color:#bdc1c6;
+    margin-top: 15rem;
+}
+
+.loader {
+    position: absolute;
+    content: "";
+    width: 75px;
+    height: 75px;
+    border: 20px solid #fb5924;
+    border-radius: 50%;
+    border-top: 20px solid #1D2C49;
+    animation: loading 2s ease infinite;
+}
+
+@keyframes loading {
+   from {
+    transform: rotate(0turn);
+   }
+   to{
+    transform: rotate(1turn);
+   }     
+}
 
 
 .navbar {
