fetch games with date and no games ok

--- a/css/style.css
+++ b/css/style.css
@@ -614,6 +614,10 @@ tbody tr:nth-child(even) {
     
 }
 
+.gameCardButton.off {
+    display: none;
+}
+
 .gameCardButton:hover {
     cursor: pointer;
     color: white;
