--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #0c121d;
-    transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
 }
 
 .loader-container p {
@@ -315,6 +315,17 @@ margin-bottom: 0.5rem;
 
 .first-section {
     width: 100%;
+}
+
+.forth-section__container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Jost', sans-serif;
+    font-size: 30px;
+    color:#bdc1c6;
 }
 
 @media screen and (max-width: 640px){
