--- a/css/style.css
+++ b/css/style.css
@@ -317,29 +317,29 @@ margin-bottom: 0.5rem;
     width: 100%;
 }
 
-.forth-section__container {
+.fourth-section__container {
     display: flex;
     flex-direction: column;
-    margin-top: 5rem;
+    margin: 3rem 5rem 3rem 5rem;
     align-items: center;
     justify-content: center;
     font-family: 'Jost', sans-serif;
-    font-size: 30px;
     color:#bdc1c6;
     border-radius: 8px;
+    transition: all ease-in-out 0.5s;
 }
 
 
-.teamSelected{
-    margin: 1rem;
-    background-color: #000000c9;
-    padding: 0.5rem;
-}
+
 
 @media screen and (max-width: 640px){
     .first-section {
         margin: 0;
     }  
+
+    .fourth-section__container {
+      margin: 1rem 0.5rem 1rem 0.5rem;  
+    }
 }
 
 .cardImage {
@@ -368,31 +368,32 @@ margin-bottom: 0.5rem;
  }
 
 
-thead th:nth-child(1) {
+ .standingsTable thead th:nth-child(1) {
     width: 0.5%;
   }
   
-  thead th:nth-child(2) {
+  .standingsTable thead th:nth-child(2) {
     width: 1%;
     
   }
   
-  thead th:nth-child(3) {
+  .standingsTable thead th:nth-child(3) {
     width: 12%;
     
   }
 
-  thead th:nth-child(4) {
-    width: 1%;
-  }
-  thead th:nth-child(5) {
-    width: 1%;
-  }
-  thead th:nth-child(6) {
+  .standingsTable thead th:nth-child(4) {
     width: 1%;
   }
 
-  thead th:nth-child(7) {
+  .standingsTable thead th:nth-child(5) {
+    width: 1%;
+  }
+  .standingsTable thead th:nth-child(6) {
+    width: 1%;
+  }
+
+  .standingsTable thead th:nth-child(7) {
     width: 1%;
   }
 
@@ -401,24 +402,24 @@ thead th:nth-child(1) {
     text-align: center;
   }
 
-tbody tr:nth-child(6) {
+  .standingsTable tbody tr:nth-child(6) {
     border-bottom: #bdc1c6 1px dotted;
 }
 
-tbody tr:nth-child(10) {
+.standingsTable tbody tr:nth-child(10) {
     border-bottom: #bdc1c6 1px solid;
 }
 
-tbody tr:nth-child(odd) {
+.standingsTable tbody tr:nth-child(odd) {
     background-color: #1d2c49;    
   }
   
-tbody tr:nth-child(even) {
+.standingsTable tbody tr:nth-child(even) {
     
     background-color: #19263d;
   }
 
-  tbody tr:hover {
+.standingsTable tbody tr:hover {
     color:white;
     transition: ease-in-out 0.3s;
     cursor: pointer;
@@ -458,6 +459,98 @@ tbody tr:nth-child(even) {
 
 }
 
+/*====TABLEAU D'UNE EQUIPE====*/
+
+.teamSelected{
+    margin: 1rem;
+    background-color: #05070cea;  
+    padding:  0.5rem 5rem 0.5rem 5rem;
+    border-radius: 7px;
+    font-size: 25px;
+}
+
+
+.teamTable {
+    margin: 0.5rem auto 1rem auto;
+    table-layout: fixed;
+    padding-bottom: 2rem;
+    width: 60%;
+    border-collapse: collapse;
+    border-radius: 7px;
+    background-color: #05070cea;  
+}
+
+.headTeamCol {
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.headTeamTable th:nth-child(1) {
+    width: 6%;
+  }
+
+.headTeamTable th:nth-child(2) {
+    width: 15%;
+  }
+  
+.headTeamTable th:nth-child(3) {
+    width: 8%;
+  }
+  
+.headTeamTable th:nth-child(4) {
+    width: 3%;
+  }
+
+.cardTeamElements{
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.bodyTeamTable tr:nth-child(odd) {
+    background-color: #1616169d;    
+  }
+  
+.bodyTeamTable tr:nth-child(even) {
+    
+    background-color: #111111a1;
+  }
+
+  .bodyTeamTable tr:hover {
+    color:white;
+    transition: ease-in-out 0.3s;
+    background-color:#05070c;
+  }
+
+  .cardTeamFirstName , .cardTeamLastName {
+    text-align: left; 
+    }
+    .cardTeamFirstName , .cardTeamLastName, .cardTeamBirth , .cardTeamCountry {
+        font-size: 20px;
+        
+    }  
+
+@media screen and (max-width: 768px){
+
+    .teamSelected {
+        padding:  0.5rem 1rem 0.5rem 1rem;
+        margin: 0.5rem auto 1rem auto;
+    }
+
+    .teamTable{
+        font-weight:lighter;
+        width: 95%;
+    }
+    
+    .headTeamCol {
+        font-size: 12px;
+        
+    }
+
+    .cardTeamFirstName , .cardTeamLastName, .cardTeamBirth , .cardTeamCountry {
+        font-weight: normal;
+        
+    }
+ }
 
 
 
@@ -658,7 +751,7 @@ tbody tr:nth-child(even) {
     border: none;
     display: flex;
     flex-direction: center;
-    color:#d8d8d8;
+    color:rgb(233, 233, 233);
     letter-spacing: 2px;
     margin: 0.5rem;
     font-family: 'Anton', sans-serif;
@@ -734,31 +827,34 @@ tbody tr:nth-child(even) {
     flex-direction: column;
     margin: auto;
     padding: 0.2rem;
+    
 }
 
 .gameData p {
     display: flex;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 80px;
+    text-shadow: rgb(0, 0, 0) 3px 0 15px;
 }
+
 
 
 @media screen and (max-width: 640px){
     .gameData p {
-        font-size: 35px;
+        font-size: 50px;
     }
 }
 
 
+
 .homeTeamScore {
-    font-size: 50px;
+    margin-left: 2.5rem;
 }
-
-
 
 .visitorTeamScore {
-    font-size: x-large;
+    margin-right: 2.5rem;
 }
+
 
 .gameCardImageVisitor , .gameCardImageHome{
     width: 50%;
@@ -769,6 +865,7 @@ tbody tr:nth-child(even) {
 }
 
 /*BACKGROUND COLORS DE CHAQUE EQUIPE*/
+
 
 
 /*CONF EST*/
@@ -838,7 +935,7 @@ tbody tr:nth-child(even) {
 }
 
 .WAS{
-    background: rgb(231, 231, 231);
+    background: rgb(255, 255, 255);
     background-image: url(https://upload.wikimedia.org/wikipedia/fr/archive/d/d6/20161212034849%21Wizards2015.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -896,73 +993,123 @@ tbody tr:nth-child(even) {
 /*CONF OUEST*/
 .MEM {
     background: rgb(0, 42, 121);
+    background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/f/f1/Memphis_Grizzlies.svg/1200px-Memphis_Grizzlies.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .MIN {
     background: rgb(0, 63, 134);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/d9/Timberwolves_du_Minnesota_logo_2017.png/200px-Timberwolves_du_Minnesota_logo_2017.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .DEN {
     background: rgb(0, 0, 29);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/3/35/Nuggets_de_Denver_2018.png/180px-Nuggets_de_Denver_2018.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .SAC {
     background: rgb(87, 11, 138);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/9/95/Kings_de_Sacramento_logo.svg/1200px-Kings_de_Sacramento_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .PHX {
     background: rgb(121, 0, 190);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/5/56/Phoenix_Suns_2013.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .DAL {
     background: rgb(0, 36, 196);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/b/b8/Mavericks_de_Dallas_logo.svg/150px-Mavericks_de_Dallas_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .LAC {
-    background: rgb(0, 14, 75);
+    background: rgb(221, 221, 221);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/d/d6/Los_Angeles_Clippers_logo_2010.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
-.LAC .gameCardImage {
-    width: 60%; 
- }
 
 .NOP {
     background: rgb(90, 0, 15);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/2/21/New_Orleans_Pelicans.png/200px-New_Orleans_Pelicans.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .GSW {
     background: rgb(212, 145, 0);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/de/Warriors_de_Golden_State_logo.svg/1200px-Warriors_de_Golden_State_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .OKC {
     background: rgb(196, 46, 0);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/4/4f/Thunder_d%27Oklahoma_City_logo.svg/1200px-Thunder_d%27Oklahoma_City_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .UTA {
     background: rgb(0, 92, 54);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/3/3b/Jazz_de_l%27Utah_logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .POR {
     background: rgb(100, 0, 0);
+    background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/2/21/Portland_Trail_Blazers_logo.svg/1200px-Portland_Trail_Blazers_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .LAL {
     background: rgb(61, 9, 182);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Los_Angeles_Lakers_logo.svg/220px-Los_Angeles_Lakers_logo.svg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
-.LAL .gameCardImage {
-    width: 55%; 
- }
 
 .SAS {
-    background: rgb(128, 128, 128);
+    background: rgb(189, 189, 189);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/0/0e/San_Antonio_Spurs_2018.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .HOU {
     background: rgb(46, 0, 0);
+    background-image: url(https://upload.wikimedia.org/wikipedia/fr/thumb/d/de/Houston_Rockets_logo_2003.png/330px-Houston_Rockets_logo_2003.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     width: 50%;
 }
-
-.HOU .gameCardImage {
-    width: 60%; 
- }
